# AnimalCrossingTools-Android

./: LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
acnh_module/: README.md  pubspec.yaml
acnh_module/gradle/wrapper/: gradle-wrapper.properties
acnh_module/lib/: main.dart
acnh_module/lib/platform/: native_app.dart  platform.dart
acnh_module/lib/screens/: about.dart  screens.dart  unknown_screen.dart
acnh_module/test/: widget_test.dart
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: acnh.db
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/hook/: CMakeLists.txt  native-lib.cpp
app/src/main/res/drawable/: ic_bookmark_black_24dp.xml  ic_check_box_black_24dp.xml  ic_check_box_outline_blank_black_24dp.xml  ic_fish.xml  ic_visibility_black_24dp.xml  rounded_line_background.xml  toggle.xml  toggle_checked.xml  toggle_unchecked.xml  toolbar_color_animation.xml  toolbar_deep_color.xml  toolbar_normal_color.xml
app/src/main/res/drawable-v21/: am_edit_to_ok.xml  am_invisible_to_visible.xml  am_mark_to_none.xml  am_none_to_mark.xml  am_ok_to_edit.xml  am_visible_to_invisible.xml  ok_to_check.xml  state_list_toggle.xml  toggle.xml  toggle_checked_unchecked.xml  toggle_unchecked_checked.xml
app/src/main/res/layout/: abc_search_dropdown_item_icons_2line.xml  activity_main.xml  chat_fragment.xml  fish_bottom_sheet.xml  fish_fragment.xml  fish_item.xml  fragment_art.xml  fragment_bugs.xml  fragment_chat.xml  fragment_datausage.xml  fragment_fish.xml  fragment_fossils.xml  fragment_houseware.xml  fragment_houseware_detail.xml  fragment_main.xml  fragment_music_play.xml  fragment_seacreature.xml  fragment_settings.xml  fragment_song.xml  fragment_stun_test.xml  fragment_tracker.xml  (+24 more)
gradle/wrapper/: gradle-wrapper.properties
ratingbar/src/main/: AndroidManifest.xml
shared/: build.gradle
shared/src/main/: AndroidManifest.xml
stun/: build.gradle
tracker_proto/: build.gradle
tracker_proto/src/main/proto/: backend.proto  nat.proto
(+291 files in other folders)
